# receipts-processor

./: .gitignore  README.md  pyproject.toml
src/receipts/: parse_dfs.py  scrape_coop.py  urls.py
